[Gepardec/mega#727] change .collect to .toList